Fix tabs text on Safari. Add Opera to browser list. Update browser logo files.

--- a/src/components/embed/ui/molecules/tabBar/TabBar.module.scss
+++ b/src/components/embed/ui/molecules/tabBar/TabBar.module.scss
@@ -14,6 +14,8 @@
 }
 
 .tabs button {
+  display: flex;
+  align-items: center;
   flex: 1 1 0;
   background-color: transparent;
   border: none;
